# backend

./: .gitignore  Cargo.toml  README.md  Rocket.toml  schema.sql
.sqlx/: query-02a43043e5fabd235ade407e3edeb4468cf4c25161c3049be92c44e6b15c2bf9.json  query-08107267aab2be01a425864705c808f9204a35a2f1a8b321b2d88ba557d3c5a5.json  query-13219e3bd0d3d7624e67604f904492c1d29dad2cbd4f028072d56d84dad54eab.json  query-14b1bbf009032ccba11014f38dec852709c663e7fb5797efe6e1e9d47b5f7dba.json  query-178db10dc4f7163b2c7f9a2403fde6536f54c41afa2711dfb84b7041f597df40.json  query-2cb01695cffbb67df7bfeb2add6ff650cee30910b55afd8c2ae766a39b36a029.json  query-33817cbfdd6a4144ab4375c689c32dcda91f45aa6ba217f626a7d44ab3d6235e.json  query-359a63e3f9c674922a874b6bf015b66aed2a003dbdd972d96634ac6ac2f1530c.json  query-35cbc2423e0aadac0152b2535087902ddfc6cde13ee5855ffd0630d2d5bfdac6.json  query-380eaebcaf81c7ace4af1307f25a8ddd67b75d9d433ea1ccf8474611dd8e933e.json  query-3d160c18c72ef1ec656f102cff1d74a5ffd21ebca02463795020a1d39f96c814.json  query-48e89e09f964ed735a967378381ae889d8e491a1b2a9554a1505409293ee600c.json  query-507b8a26f2736a2dc1e6f698ef7957914af4d6fe21948f92eac56384c184d1fc.json  query-523637df07449016076f2ebb53d6e8519450582ba451dabe7eaf9ff1bd45946a.json  query-5400ae6d32ebb28c9222f122816e0b434867b9efc6663a64dcd943f23af1ec09.json  query-563750f7df2e9c7c3b7c6d59cd24dcaec629452d1cdf91ab42c5a5fc255c4802.json  query-589ad17e8a5588eec4978f7d09dd6e2337e83a84a9be532d287cd891ba8274c4.json  query-593ea953b9a61fd3a86222ae13d1037a72aa52624868652ca410b02d5d1847b9.json  query-5bf4717e54570f2395e60999031b0472a8309012ad4a6508200766de5ca80591.json  query-5e4b0c92dce3828d701debe534a49fb84ebc88ae43d73a27130d1d417ae23b51.json  query-5fbce9dcd1c2ea954743ceee4a80ac48efe3a4ac34d97778f537700216b8fab0.json  query-603faa67cb3da6567a0de963ed220c40837b8a30bbfe19f3d42a55afdeccb42c.json  query-648c53ee520648a71d20d0bba5a5d1000008654939183a65ef6b20cc6001828f.json  query-649d08375a7dc4e209135b05367a673670a85164bbbea527236801de79933f6e.json  query-668bedb3ba48fa2f6c9031cd356e86acbb290cce058bc685cf199d8aef516c0d.json  (+30 more)
src/: book_detail.rs  catalog.rs  config.rs  (+9 more)
(+6 files in other folders)
