[package]
name = "backend"
version = "0.1.0"
edition = "2024"
license = "blessing"

[dependencies]
anyhow = "1.0.100"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono" ] }
tokio = { version = "1.49.0", features = ["full"] }
serde_qs = "0.15.0"
reqwest = { version = "0.13.1" }
serde_json = "1.0.149"
rocket_cors = "0.6.0"
base64      = "0.22"
rand = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.43"
subtle = "2.6.1"
lettre = { version = "0.11.19", features = ["smtp-transport", "tokio1-native-tls", "builder"], default-features = false }
tera = "1.20.1"
percent-encoding = "2.3.2"
figment = { version = "0.10.19", features = ["env", "toml"] }
email_address = "0.2.9"
